glx/testdata/invalid/comprehensive-broken-references/events/event-birth.glx
events:
  event-birth:
    type: birth
    date: "1850-01-15"
    place: place-nonexistent
    participants:
      - person: person-nonexistent
        role: subject

